fixed product title on mobile. #8

--- a/src/components/Products/View.scss
+++ b/src/components/Products/View.scss
@@ -33,6 +33,11 @@ body {
       border-bottom: 2px solid $color-separator;
       padding-bottom: 10px;
       margin-bottom: 10px;
+
+      @include susy-media(0 $bp-small-2) {
+        padding-top: 5px;
+        font-size: 1.5em;
+      }
     }
 
     .buy {
